Opened 4 years ago
Closed 4 years ago
#9743 closed defect (fixed)
MOV farsi audio language not recognized
| Reported by: | Fernickk | Owned by: | |
|---|---|---|---|
| Priority: | normal | Component: | ffprobe |
| Version: | unspecified | Keywords: | mov audio language farsi |
| Cc: | Fernickk | Blocked By: | |
| Blocking: | Reproduced by developer: | no | |
| Analyzed by developer: | no |
Description
Hello, this is more of a ffprobe issue. MOV files set the language of their streams with the mdhd atom, in which a 16 bit value defines the language. The values set on that field correspond to the table
I have a file (which sadly I can't share, but I don't think it's needed to solve this issue) that has 31 (Farsi) as the language value. ffprobe doesn't recognize it as either "per" or "fas", and declares that the stream has no language.
Is there a chance to recognize the values of that table and report the languages accordingly? I assume that the atom is interpreted, since english streams (with value 0) are recognized as such.
Best regards,
Fernickk
Change History (2)
comment:1 by , 4 years ago
| Status: | new → open |
|---|
comment:2 by , 4 years ago
| Resolution: | → fixed |
|---|---|
| Status: | open → closed |
Fixed in 58880a8ea8d1aa0497e88f0da4e88455db9ba723.



Obvious fix https://patchwork.ffmpeg.org/project/ffmpeg/patch/20220427110002.75021-1-4rusxg@gmail.com/